--- a/WebContent/jiamengshanggeren.html
+++ b/WebContent/jiamengshanggeren.html
@@ -112,16 +112,13 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="cart_list table-responsive">
-                            <table class="table_cart">
+                          <table class="table_cart">
                                 <thead>
                                     <tr>
                                         <th class="product col-xs-2">产品</th>
                                         <th class="description col-xs-4">描述</th>
                                         <th class="unit_price">单价(元)</th>
-                                        <th>数量</th>
-                                        <th>总价</th>
                                         <th>状态</th>
-                                        <th class=" col-xs-1">操作</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -130,25 +127,12 @@
                                             <a href="#"><img src="img/11.png" alt="cart"></a>
                                         </td>
                                         <td class="product_des">
-                                            <h3>这里是订单描述</h3>
-                                            <p> 下单时间：2016-4-26 21:17:52</p>
-                                            <p>材料：黄金五百克</p>
+                                            <h3>&nbsp;</h3>
                                         </td>
                                         <td class="u_price">$120</td>
-                                        <td class="p_quantity">
-                                            <div class="pp_quantity">
-                                                6
-                                            </div>
-                                        </td>
-                                        <td class="p_value">$120</td>
                                         <td class="p_action">
-                                            <button type="button" class="btn  btn-warning  btn-block">等待付款</button>
-                                            <p><a href="">删除订单</a></p>
-                                        </td>
-                                        <td class="p_action">
-                                            <button type="button" class="btn  btn-success  btn-block">立即付款</button>
-                                            <p><a href="">找人代付</a></p>
-                                            <p><a href="">取消订单</a></p>
+                                            <button type="button" class="btn  btn-warning  btn-block">已上架</button>
+                                            <p><a href="">删除</a></p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -156,22 +140,12 @@
                                             <a href="#"><img src="img/11.png" alt="cart"></a>
                                         </td>
                                         <td class="product_des">
-                                            <h3>ACCUMSAN ELIT</h3>
-                                            <p>这里是产品描述 </p>
+                                            <h3>&nbsp;</h3>
                                         </td>
                                         <td class="u_price">$120</td>
-                                        <td class="p_quantity">
-                                            <div class="pp_quantity">
-                                                20
-                                            </div>
-                                        </td>
-                                        <td class="p_value">$120</td>
                                         <td class="">
-                                            <button type="button" class="btn  btn-success  btn-block">交易成功</button>
-                                            <p><a href="">订单详情</a></p>
-                                        </td>
-                                        <td >
-                                            <button type="button" class="btn  btn-primary  btn-block">商品评价</button>
+                                            <button type="button" class="btn  btn-success  btn-block">已上架</button>
+                                            <p><a href="">删除</a></p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -179,23 +153,12 @@
                                             <a href="#"><img src="img/11.png" alt="cart"></a>
                                         </td>
                                         <td class="product_des">
-                                            <h3>这里是订单描述</h3>
-                                            <p> 下单时间：2016-4-26 21:17:52</p>
-                                            <p>材料：黄金五百克</p>
+                                            <h3>&nbsp;</h3>
                                         </td>
                                         <td class="u_price">$120</td>
-                                        <td class="p_quantity">
-                                            <div class="pp_quantity">
-                                                6
-                                            </div>
-                                        </td>
-                                        <td class="p_value">$120</td>
                                         <td class="p_action">
-                                            <button type="button" class="btn  btn-success  btn-block">交易成功</button>
-                                            <p><a href="">订单详情</a></p>
-                                        </td>
-                                        <td class="p_action">
-                                            <button type="button" class="btn  btn-primary  btn-block">商品评价</button>
+                                            <button type="button" class="btn  btn-success  btn-block">已上架</button>
+                                            <p><a href="">删除</a></p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -203,29 +166,19 @@
                                             <a href="#"><img src="img/11.png" alt="cart"></a>
                                         </td>
                                         <td class="product_des">
-                                            <h3>这里是订单描述</h3>
-                                            <p> 下单时间：2016-4-26 21:17:52</p>
-                                            <p>材料：黄金五百克</p>
+                                            <h3>&nbsp;</h3>
                                         </td>
                                         <td class="u_price">$120</td>
-                                        <td class="p_quantity">
-                                            <div class="pp_quantity">
-                                                6
-                                            </div>
-                                        </td>
-                                        <td class="p_value">$120</td>
                                         <td class="p_action">
-                                            <button type="button" class="btn  btn-warning  btn-block">等待付款</button>
-                                            <p><a href="">删除订单</a></p>
-                                        </td>
-                                        <td class="p_action">
-                                            <button type="button" class="btn  btn-success  btn-block">立即付款</button>
-                                            <p><a href="">找人代付</a></p>
-                                            <p><a href="">取消订单</a></p>
+                                            <button type="button" class="btn  btn-warning  btn-block">已上架</button>
+                                            <p><a href="">删除</a></p>
                                         </td>
                                     </tr>
                                 </tbody>
                             </table>
+                            <p class="navbar-inverse">
+                              <button type="button" class="btn  btn-success  btn-block">添加商品</button>
+                            </p>
                         </div>
                     </div>
                 </div>
