--- a/WebContent/jiamengxinxi.html
+++ b/WebContent/jiamengxinxi.html
@@ -42,7 +42,7 @@
                             <li><a href="gongyedingzhi.html">工业/个性化定制</a></li>
 				        </ul>
 			        </li>
-					<li><a href="model.jsp">模型库</a></li>
+					<li><a href="model.html">模型库</a></li>
 					<li><a href="designer.html">设计师</a></li>
 					<li><a href="join.html">加盟/入驻</a></li>
 					<li><a href="shangcheng.html">商城</a></li>
@@ -52,7 +52,7 @@
 				<!-- 右边占位 -->
 				<div class="navbar-right"></div>
 				<ul class="nav navbar-nav navbar-right">
-					<a href="login.jsp" class="btn btn-primary navbar-btn">登录</a>
+					<a href="login.html" class="btn btn-primary navbar-btn">登录</a>
 					<a href="register.html" class="btn btn-default navbar-btn">注册</a>
 				</ul>
 				<!-- 搜索框 -->
@@ -151,7 +151,7 @@
 					<h2><span class="glyphicon glyphicon-user"></span> 我是设计师</h2>
 				</li>
 				<li class="col-lg-2">
-					<h2><span class="glyphicon glyphicon-cog"></span> 云制造</h2>
+					<h2><span class="glyphicon glyphicon-cog"></span> 我是加盟商</h2>
 				</li>
 				<li class="col-lg-2">
 					<h2><span class="glyphicon glyphicon-wrench"></span> 服务支持</h2>
