--- a/WebContent/shejishiyemian.html
+++ b/WebContent/shejishiyemian.html
@@ -91,7 +91,7 @@
                     
                     <h2 class="title_sm">Ta的作品</h2>
                     <h2 class="title_sm">Ta的积分：</h2>
-                    <button type="button" class="btn  btn-primary " >私信Ta</button>
+                    <button type="button" class="btn  btn-primary " >关注Ta</button>
                 </div>
             </div>
 <div class="row">
@@ -113,7 +113,7 @@
                             <div class="col-md-2" >
                                 <br><br><br><br><br>
                                 <button type="button" class="btn  btn-danger  btn-block " >❤</button>
-                                <button type="button" class="btn  btn-success  btn-block">购买</button>
+                                <button type="button" class="btn  btn-success  btn-block">下载</button>
                             </div>
                         </div>
                         <br>
@@ -129,7 +129,7 @@
                             <div class="col-md-2" >
                                 <br><br><br><br><br>
                                 <button type="button" class="btn  btn-danger  btn-block " >❤</button>
-                                <button type="button" class="btn  btn-success  btn-block">购买</button>
+                                <button type="button" class="btn  btn-success  btn-block">下载</button>
                             </div>
                         </div>
                         <br>
@@ -145,7 +145,7 @@
                             <div class="col-md-2" >
                                 <br><br><br><br><br>
                                 <button type="button" class="btn  btn-danger  btn-block " >❤</button>
-                                <button type="button" class="btn  btn-success  btn-block">购买</button>
+                                <button type="button" class="btn  btn-success  btn-block">下载</button>
                             </div>
                         </div>
 
@@ -199,7 +199,7 @@
                         <h2><span class="glyphicon glyphicon-user"></span> 我是设计师</h2>
                     </li>
                     <li class="col-lg-2">
-                        <h2><span class="glyphicon glyphicon-cog"></span> 云制造</h2>
+                        <h2><span class="glyphicon glyphicon-cog"></span> 我是加盟商</h2>
                     </li>
                     <li class="col-lg-2">
                         <h2><span class="glyphicon glyphicon-wrench"></span> 服务支持</h2>
