--- a/WebContent/join.html
+++ b/WebContent/join.html
@@ -208,7 +208,7 @@
 					<h2><span class="glyphicon glyphicon-user"></span> 我是设计师</h2>
 				</li>
 				<li class="col-lg-2">
-					<h2><span class="glyphicon glyphicon-cog"></span> 云制造</h2>
+					<h2><span class="glyphicon glyphicon-cog"></span> 我是加盟商</h2>
 				</li>
 				<li class="col-lg-2">
 					<h2><span class="glyphicon glyphicon-wrench"></span> 服务支持</h2>
