提交内容:完成设计师页面关注和取消关注功能，入住页面新增jspsmartupload插件

--- a/WebContent/designer_person.html
+++ b/WebContent/designer_person.html
@@ -71,7 +71,7 @@
 	<header id="header" class="navbar-fixed-top">
 		<div class="container-fluid">
             <div class="navbar-header">
-                <a href="index.html">
+                <a href="index.jsp">
                      <img alt="Brand" src="images/logo.png" height="50px">
                 </a>
             </div>
@@ -88,7 +88,7 @@
                         </ul>
                     </li>
                     <li><a href="model.jsp">模型库</a></li>
-                    <li><a href="designer.html">设计师</a></li>
+                    <li><a href="designer.jsp">设计师</a></li>
                     <li><a href="join.html">加盟/入驻</a></li>
                     <li><a href="shangcheng.html">商城</a></li>
                     <li><a href="dingdanguanli.html">我的订单</a></li>
@@ -123,7 +123,7 @@
             </div><!-- /.navbar-collapse -->
     		<!-- <div class="visible-nav navbar-right visible-xs">
     			<a href="#" hreflang="fr">FR</a>
-    			<a class="active" href="index.html" hreflang="en-US">EN</a>
+    			<a class="active" href="index.jsp" hreflang="en-US">EN</a>
     			<a href="#contact">Contact</a>
     		</div> -->
         </div>
