--- a/WebContent/shejishigeren.html
+++ b/WebContent/shejishigeren.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <a href="index.html">
+                <a href="index.jsp">
                     <img alt="Brand" src="images/logo.png" height="50px">
                 </a>
             </div>
@@ -35,7 +35,7 @@
                         </ul>
                     </li>
                     <li><a href="model.jsp">模型库</a></li>
-                    <li><a href="designer.html">设计师</a></li>
+                    <li><a href="designer.jsp">设计师</a></li>
                     <li class="active"><a>加盟/入驻</a></li>
                     <li><a href="shangcheng.html">商城</a></li>
                     <li><a href="dingdanguanli.html">我的订单</a></li>
