--- a/WebContent/dingdan.html
+++ b/WebContent/dingdan.html
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <a href="index.html">
+                <a href="index.jsp">
                     <img alt="Brand" src="images/logo.png" height="50px">
                 </a>
             </div>
@@ -31,7 +31,7 @@
                         </ul>
                     </li>
                     <li><a href="model.html">模型库</a></li>
-                    <li><a href="designer.html">设计师</a></li>
+                    <li><a href="designer.jsp">设计师</a></li>
                     <li><a href="join.html">加盟/入驻</a></li>
                     <li><a href="shangcheng.html">商城</a></li>
                      <li class="active"><a>我的订单</a></li>
