导航页面归入share.jsp;实现登陆退出判断
Signed-off-by: weifong <454998386@qq.com>

--- a/WebContent/designer_person.html
+++ b/WebContent/designer_person.html
@@ -68,6 +68,7 @@
 </head>
  
 <body>
+<%@include file="share.jsp" %>
 	<header id="header" class="navbar-fixed-top">
 		<div class="container-fluid">
             <div class="navbar-header">
