--- a/WebContent/join.html
+++ b/WebContent/join.html
@@ -44,7 +44,7 @@
 				<div class="navbar-right"></div>
 				<ul class="nav navbar-nav navbar-right">
 					<a href="login.jsp" class="btn btn-primary navbar-btn">登录</a>
-					<a href="register.html" class="btn btn-default navbar-btn">注册</a>
+					<a href="register.jsp" class="btn btn-default navbar-btn">注册</a>
 				</ul>
 				<!-- 搜索框 -->
 				<form class="navbar-form navbar-right" role="search">
@@ -143,10 +143,10 @@
 		<!-- 板块三：按钮 -->
 		<div class="col-lg-3" style="height: 300px;">
 			<div class="panel panel-default join_btn_group">
-				<a href="ruzhuxinxi.html">
+				<a href="ruzhuxinxi.jsp">
 					<div><big class="glyphicon glyphicon-triangle-left"></big><span class="big">我</span>/要入驻</div>
 				</a>
-				<a href="jiamengxinxi.html">
+				<a href="jiamengxinxi.jsp">
 					<div><span class="big">我</span>/要加盟<span class="glyphicon glyphicon-triangle-right"></span></div>
 				</a>
 			</div>
